--- a/src/UserOutput/UserOutput.css
+++ b/src/UserOutput/UserOutput.css
@@ -1,5 +1,9 @@
 .UserOutput {
-  margin-top: 20px;
+  margin-top: 30px;
+}
+
+.UserOutput:not(:last-child) {
+  border-bottom: 1px solid rgb(205, 205, 205);
 }
 
 .UserOutput p {
